Bug 1654470 - Improve font selection heuristics for character sequences that should get emoji-style presentation. r=m_kato

Differential Revision: https://phabricator.services.mozilla.com/D84703